# tiktoken-rs

./: Cargo.toml  build.rs  generate_prefixes.rs
benches/: bench.rs
data/: codestral.prefixes  codestral.tiktoken
src/: corebpe.rs  embedded.rs  encoding.rs  lib.rs  load.rs  odht.rs  openai_public.rs  rollhash.rs  tests.rs
