[package]
name = "tiktoken"
version = "0.1.0"
edition = "2021"
rust-version = "1.57.0"

[[bin]]
name = "generate_prefixes"
path = "generate_prefixes.rs"

[lib]
name = "tiktoken"

[features]
embedded_prefixes = []

[dev-dependencies]
criterion = "0.4"
tiktoken-rs = "0.5.4"
memory-stats = "1.2.0"
test-case = "2.0.0-rc3"

[dependencies]
phf_codegen = "0.11.2"
phf = "0.11.2"
fancy-regex = "0.10.0"
regex = "1.7.0"
rustc-hash = "1.1.0"
bstr = "1.0.1"
hex = "0.4.3"
sha2 = "0.10.6"
base64 = "0.21.0"
thiserror = "1.0.38"
const-primes = "0.8.7"

[[bench]]
name = "bench"
harness = false